src/ui/readarr_ui/indexers/snapshots/managarr__ui__readarr_ui__indexers__edit_indexer_ui__edit_indexer_ui_tests__tests__snapshot_tests__edit_indexer_ui_renders_loading.snap
---
source: src/ui/readarr_ui/indexers/edit_indexer_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                         ╭────────────────────────────────────────────────  Edit Indexer  ─────────────────────────────────────────────────╮                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │ Loading ...                                                                                                     │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
